miniextendr-macros/tests/ui/fn_dots_without_variadic.rs
use miniextendr_macros::miniextendr;

#[miniextendr(dots = typed_list!(x => numeric()))]
pub fn missing_variadic(a: i32) -> i32 {
    a
}

fn main() {}
